--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <body>
 
         <header class = "header">
-            <a href="#" class = "logo">Portfolio.</a>
+           <a href="#" class = "logo">RH.</a>
 
             <nav class = "navbar">
                 <a href="#" style="--i:1;" class="active">Home</a>
-                <a href="#" style="--i:2;">Education</a>
-                <a href="#" style="--i:3;">Skills</a>
+                <a href="#" style="--i:2;">Bio</a>
+                <a href="#" style="--i:3;">Elevator Pitch</a>
                 <a href="#" style="--i:4;">Portfolio</a>
                 <a href="#" style="--i:5;">Contact</a>
                 
@@ -28,9 +28,9 @@
         <section class = "home">
             <div class = "home-content">
                 <h3> Hello, I am </h3>
-                <h1> Ruben </h1>
+                <h1> Ruben Houngbedji </h1>
                 <h3>And I'm a <span> Data Analyst </span></h3>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta architecto maiores ex optio totam facilis beatae ad perferendis ut enim quos, quae debitis reprehenderit numquam deleniti ipsam vero? Reprehenderit, numquam.</P>
+                <P>Ruben Houngbedji, an accomplished actuarial analyst, leverages mathematical expertise to revolutionize risk assessment and drive profitability. With a commitment to excellence and a focus on data-driven solutions, Ruben is an invaluable asset to any team.</P>
 
                 <div class="social-media">
                     <a href="#" style="--i:6;" ><i class='bx bxl-linkedin-square'></i></a>
