--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
             <nav class = "navbar">
                 <a href="#" style="--i:1;" class="active">Home</a>
-                <a href="#" style="--i:2;">Bio</a>
-                <a href="#" style="--i:3;">Elevator Pitch</a>
-                <a href="#" style="--i:4;">Portfolio</a>
-                <a href="#" style="--i:5;">Contact</a>
+                <a href="Bio.html" style="--i:2;">Bio</a>
+                <a href="Elev_pitch.html" style="--i:3;">Elevator Pitch</a>
+                <a href="Portfolio.html" style="--i:4;">Portfolio</a>
+                <a href="contact.html" style="--i:5;">Contact</a>
                 
             </nav>
         </header>
