--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <P>Ruben Houngbedji, an accomplished actuarial analyst, leverages mathematical expertise to revolutionize risk assessment and drive profitability. With a commitment to excellence and a focus on data-driven solutions, Ruben is an invaluable asset to any team.</P>
 
                 <div class="social-media">
-                    <a href="#" style="--i:6;" ><i class='bx bxl-linkedin-square'></i></a>
+                    <a href="https://www.linkedin.com/in/ruben-houngbedji-793805110?trk=contact-info" style="--i:6;" ><i class='bx bxl-linkedin-square'></i></a>
                     <a href="#" style="--i:7;" ><i class='bx bxl-twitter'></i></a>
                     <a href="#" style="--i:8;" ><i class='bx bxl-instagram'></i></a>
-                    <a href="#" style="--i:9;" ><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://wa.me/qr/W7LDU6FGRD2XE1" style="--i:9;" ><i class='bx bxl-whatsapp'></i></a>
             </div>
 
             <a href="#" class="btn">Download CV</a>
