--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                 <P>Ruben Houngbedji, an accomplished actuarial analyst, leverages mathematical expertise to revolutionize risk assessment and drive profitability. With a commitment to excellence and a focus on data-driven solutions, Ruben is an invaluable asset to any team.</P>
 
                 <div class="social-media">
-                    <a href="https://www.linkedin.com/in/ruben-houngbedji-793805110?trk=contact-info" style="--i:6;" ><i class='bx bxl-linkedin-square'></i></a>
-                    <a href="#" style="--i:7;" ><i class='bx bxl-twitter'></i></a>
-                    <a href="#" style="--i:8;" ><i class='bx bxl-instagram'></i></a>
-                    <a href="https://wa.me/qr/W7LDU6FGRD2XE1" style="--i:9;" ><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://www.linkedin.com/in/ruben-houngbedji-793805110?trk=contact-info" target="_blank" style="--i:6;" ><i class='bx bxl-linkedin-square'></i></a>
+                    <a href="#" target="_blank" style="--i:7;" ><i class='bx bxl-twitter'></i></a>
+                    <a href="#" target="_blank" style="--i:8;" ><i class='bx bxl-instagram'></i></a>
+                    <a href="https://wa.me/qr/W7LDU6FGRD2XE1" target="_blank" style="--i:9;" ><i class='bx bxl-whatsapp'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="https://1drv.ms/b/s!AvKkdu2OgbhvgShO66xvXari1vgN" target="_blank" class="btn">Download CV</a>
             </div>
 
             <div class="home-img">
-                <img src ="https://www.npg.org.uk/assets/image-cache//npg-image-crops/main.20e73652.blog_anthony_comber_badu.3b281d58.webp" alt ="">
+                <img src ="ruben.jpeg" alt ="">
             </div>
         </section>
 
