--- a/contact.html
+++ b/contact.html
@@ -11,5 +11,17 @@
     </head>
 
 <body>
-
+    <div class="container">
+        <h1>Contact Me</h1>
+        <div class="contact-info">
+            <div class="contact-item">
+                <span>Email:</span>
+                <a href="mailto:angeson10@gmail.com">angeson10@gmail.com</a>
+            </div>
+            <div class="contact-item">
+                <span>Phone:</span>
+                <a href="tel:+233509154610">+233 50 915 4610</a>
+            </div>
+        </div>
+    </div>
 </body>
