--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="Bio.html" style="--i:2;">Bio</a>
                 <a href="Elev_pitch.html" style="--i:3;">Elevator Pitch</a>
                 <a href="Portfolio.html" style="--i:4;">Portfolio</a>
-                <a href="contact.html" style="--i:5;">Contact</a>
+                <a href="contact.html" target="_blank" style="--i:5;">Contact</a>
                 
             </nav>
         </header>
